--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <ul>
             <li> <a href="mailto:info@devstudio.com"></a>info@devstudio.com</li>
-            <li> <a href="tel:+38 096 111 11 11"></a>+38 096 111 11 11</li>
+            <li> <a href="tel:+380961111111"></a>+380961111111</li>
         </ul>
     </header>
     <main>
@@ -124,7 +124,7 @@
                     <a href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li>
-                    <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+                    <a href="tel:+380991111111">+380991111111</a>
                 </li>
             </ul>
         </address>
