--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>markup-hw-01</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>   
         <nav>
-            <a href="/">
-            WebStudio   
-            </a>
+            <a href="/">WebStudio</a>
             <ul>
                 <li> <a href="">Студия </a></li>
                 <li> <a href="">Портфолио </a></li>
@@ -25,6 +24,7 @@
         </ul>
     </header>
     <main>
+        <!--Герой-->
         <div>
             <section>
                 <h1>Эффективные решения для вашего бизнеса</h1>
